added top and bottom quote brackets, lost the pink hghlights cause hr sucks. since adding lightbox, imgs are now taking up the whole block, probably cause of image contain, need to figure that out

--- a/_profiles/01Andrenne Akanke.html
+++ b/_profiles/01Andrenne Akanke.html
@@ -37,6 +37,7 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
   </a>
 </div>
 
+
 <h3 class="question">From teaching children, I remember you told me at one point you were an art curator, you helped put people on art shows, how did that come to be?</h3>
 
 <p>I have a lot of experience putting shows together. I volunteered with galleries to put their shows on, and I was young, sooo... [laughs] I was young, so it didn’t really.... I don’t know they gave me opportunities to put my work too. They’d be like, “Ohh you can put your work in the show? like you’re helping, you can sell it,” and that was my introduction to professional art gallery shows. Yeah... did that for a few years.</p>
@@ -46,7 +47,9 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 <p>For the last couple years, I was thinking about doing my show, because I realized... I didn’t have my own show! I think I shy’d away every time I had the opportunity to do something for me. I would always do something on a larger scale and involve as many people, just because I know a lot of people that do these things, you know? In the art industry there are artists, and I feel like why not just share all that? "You do this, you do that and I do this, let’s do something together!" That was very much a leader in making sure that there were I guess... platforms for myself and other youths. So I did that, but then I realized, <i>Omgosh</i>, I still have not done something for <i>ME</i>, you know what I mean? Celebrating my work. I’m going to do this show because I need it... for me, right? Not just for me, but its still for everyone right? But I need, I NEED a room filled with art that was made by myself or... you know? Came from my own like... how can I transform this paint, make it my own and how can I handle that?</p>
 
 <div class="quote">
-  <h2 class="to-fade-up">{{ page.quote1 }}"</h2>
+  <hr>
+  <h2 class="to-fade-up">"{{ page.quote1 }}"</h2>
+  <hr>
 </div>
 
 <h3 class="question">What are some problems that you deal with that other people might not experience?</h3>
@@ -74,7 +77,9 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 <p>Who would I invite to a dinner party? Dead or alive... who would I? Hooold on... my <i>shadow</i>! Can I say that? I say that because we spend so much time running from ourselves right? Just hating ourselves when you look at shit at the end of the day. If we all look for someone to blame for our shit, we go around sometimes looking for that person to blame for all the wrongs, or that person to thank for all the rights. But either way, at the end of the day, it all comes down to YOU. So I’m saying, all of that stuff that I tried to run away from, or shy away from... myself. I would sit down with myself, my shadow and have a heart-to-heart. It’s true when you think about it because nobody is more important than YOU.</p>
 
 <div class="quote">
-  <h2 class="to-fade-up">{{ page.quote2 }}"</h2>
+  <hr>
+  <h2 class="to-fade-up">"{{ page.quote2 }}"</h2>
+  <hr>
 </div>
 
 <h3 class="question">What would constitute a perfect day for you, from the moment you wake up, to when you go to bed?</h3>
@@ -103,7 +108,9 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 <p>Coming to Canada, for a VERY long time, since I was I kid! YEEEAAAH man, that was the dream, that was the focus and I held on to that... my mom was here right? So she would tell me of the life here and I would be like, “WOOOW!” [laughs] Mad malls, shopping, this, that, I totally was like <i>okay</i> it’s like I saw the world before I even got here... so when I got here, it was really was like, "Wow...” like actually seeing it, you know?</p>
 
 <div class="quote">
-  <h2 class="to-fade-up">{{ page.quote3 }}"</h2>
+  <hr>
+  <h2 class="to-fade-up">"{{ page.quote3 }}"</h2>
+  <hr>
 </div>
 
 <h3 class="question">What’s the greatest accomplishment so far in your life?</h3>
@@ -135,7 +142,9 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 <p>Hmm... shaaare... vibes with! [laughs] Like build with, create with... but then again, I do... I’m not alone in this world, there’s always people. I’m saying to end that sentence, I wish I could have someone to vibe with.</p>
 
 <div class="quote">
-  <h2 class="to-fade-up">{{ page.quote4 }}"</h2>
+  <hr>
+  <h2 class="to-fade-up">"{{ page.quote4 }}"</h2>
+  <hr>
 </div>
 
 <h3 class="question">What do you like most about yourself?</h3>
