fixed those a links wow it was so easy jesus christ

--- a/_profiles/01Andrenne Akanke.html
+++ b/_profiles/01Andrenne Akanke.html
@@ -31,7 +31,7 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 
 <p>I taught art for quite some time, for a long time I taught kids through an arts organization. I worked with children, youth and peers and everybody else, and as I would teach a kid how to develop themselves, I would go home and still have my studio. I still had my studio where I was still working and keeping that going, cause what usually happens with art teachers: like they end up stopping, doing their own practises for whatever reason, I don’t know... maybe it gets too much, right? But for me... I couldn’t stay away from art. It’s like I <i>have</i> to create... like I can’t see myself <i>not</i> creating—I’ve always been a creative. I’ve always been the type of person where she’s like, “Oh I can’t afford it? Okay cool, well I’m going to use... make something out of this,” and then it turns to be something that people are like, “Oh <i>wow</i>, what is that!?” Something that people just have never seen before, or something that people want more of, right? That gave me confidence. So when I had tools that were actual tools that came from an art store, an actual paint palette, it’s like, <i>okay</i> it was time for me to master that as well and take it to the next level.</p>
 
-<div class="profile_extra1">
+<div class="profile_imgs">
   <a href="{{ page.images }}6.jpg" data-lightbox="andrenne-1">
     <img src="{{ page.images }}6.jpg" alt="sexy girl">
   </a>
@@ -62,7 +62,7 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 
 <p>So something I share with people is to basically turn water into wine, [laughs] you know what I mean? With that pain, with that thing... that very thing that is either put down, or forbidden, or not celebrated by other people is the very thing that makes you unique, right? So I would say to spend time with that thing and to examine that thing. And if you spend enough time with it, you realize that it’s something to love and to show, as opposed to something to be insecure about, or let stop you.</p>
 
-<div class="profile_extra1">
+<div class="profile_imgs">
   <a href="{{ page.images }}3.jpg" data-lightbox="andrenne-2">
     <img src="{{ page.images }}3.jpg" alt="sexy girl">
   </a>
@@ -91,12 +91,16 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 <p>I’m grateful for... I’m grateful for people. People that I can connect with and learn from and build with, like I appreciate that—just connections. Some people are complete opposite, they don’t want anything to do with people, right? Yeah for me, I try to learn something from everyone... like where would I be without people? Like I mean I sure it’ll be okay too, but even if not people... I also consider all things, all living things... like living and teaching, right?</p>
 
 <div class="profile-double-container">
-  <a href="{{ page.images }}2.jpg" data-lightbox="andrenne-3">
-    <img src="{{ page.images }}2.jpg" alt="sexy girl">
-  </a>
-  <a href="{{ page.images }}.jpg" data-lightbox="andrenne-3">
-    <img src="{{ page.images }}.jpg" alt="sexy girl">
-  </a>
+  <div class="profile_imgs">
+    <a href="{{ page.images }}2.jpg" data-lightbox="andrenne-3">
+      <img src="{{ page.images }}2.jpg" alt="sexy girl">
+    </a>
+  </div>
+  <div class="profile_imgs">
+    <a href="{{ page.images }}.jpg" data-lightbox="andrenne-3">
+      <img src="{{ page.images }}.jpg" alt="sexy girl">
+    </a>
+  </div>
 </div>
 
 <h3 class="question">If you change anything in how you were raised or how you grew up, how would you change it?</h3>
@@ -119,7 +123,7 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 
 <p>These things, these things are very ahh... I think I wouldn’t say it’s easy to do: it’s not easy to do, right? But when you wanna talk about REAL HARD SHIT to do, it’s really forgiving people; I realize people have a hard time doing that. I’m like, “Wow people have a hard time letting go of things like that....” Depending on what it is, but you do it for yourself, not for everybody, right? Even when you tell them that you forgive them, you don’t necessarily do it for them, it’s for YOU... in order for you to evolve and to just... you know... to transcend.</p>
 
-<div class="profile_extra1">
+<div class="profile_imgs">
   <a href="{{ page.images }}8.jpg" data-lightbox="andrenne-4">
     <img src="{{ page.images }}8.jpg" alt="sexy girl">
   </a>
@@ -157,7 +161,7 @@ quote5: We can all meet on a vibe, a frequency of creating and loving and enjoyi
 
 <p>What is too serious to joke about? uhhmm.... disabilities. I don’t like that, I don’t like that... it’s just sometimes people can’t really help who they are, and when people make fun of that shit, it’s just... it’s not far off from making fun of people who look the way that they do. Like you came out of the womb like that, who are you to say that you’re better than this person, who are you to say this person is ugly, or this person is, ohh like, “retarded,” those words. I don’t like putdowns basically.</p>
 
-<div class="profile_extra1">
+<div class="profile_imgs">
   <a href="{{ page.images }}9.jpg" data-lightbox="andrenne-5">
     <img src="{{ page.images }}9.jpg" alt="sexy girl">
   </a>
