updated yannie with her edits

--- a/_profiles/02Tyler Palef.html
+++ b/_profiles/02Tyler Palef.html
@@ -1,7 +1,7 @@
 ---
 layout: profile
 
-profileImage: /assets/images/portraits/tyler_palef/tyler_palef_profile.jpg
+profileImage: /assets/images/portraits/tyler_palef/tyler_palef-home.jpg
 firstName: Tyler
 lastName: Palef
 occupation: Father • Web Developer
@@ -9,7 +9,7 @@ factCategory: Hockey Player
 factFact: James Reimer
 playlistLink: https://www.youtube.com/watch?v=Y5fBdpreJiU&list=PLqLfWv6bj-W1xk3SvM4ACCnHXgH5AxM0A
 
-headImage: /assets/images/portraits/tyler_palef/tyler_palef_p.jpg
+headImage: /assets/images/portraits/tyler_palef/tyler_palef-profile.jpg
 images: /assets/images/portraits/tyler_palef/tyler_palef-
 quote1: "Then come third year: got a girl pregnant, have a baby... and that completely shifts your entire priorities."
 quote2: So I'm always thinking, "How can I give her the things that I had as a kid?" That’s what motivates me.
@@ -21,7 +21,7 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 
 <h1 class="intro-word to-fade-up">Oh man...</h1>
 
-<p>It's sorta interesting to look back at your life and sum it up or say who you are. You wanna come off humble because you know how everybody sees themselves differently... still not answering the question yet. [laughs] Who am I...? My childhood was... my parents did a really good job of trying to put my interests first. Did you ever have to get schlucked along when your brother had something to do? My parents were really solid in that they let me go home. So it’s like they really did a good job of putting me first. However, there were experiences that I feel I missed out on because they were so nurturing. Things like going to camp: I didn't like getting dirty so they’re like, "Oh you don't have to go to camp, that's cool," but you know... then you kinda miss that. Now I'm what, 23, almost turning 24 and it'd be weird if I went to camp with a bunch of kids. I think the guy that you know now—sorta jokey, that stuff... I wasn’t always like this; I really didn't come out of my shell until nearly the end of middle school. Before then—super shy, very reserved. One of my birthday parties (and this might be sad, though also funny): See I was stoked for the Gamecube to come out, so I got Mario Party and... have you ever thrown a party where only half the people come? Have you ever thrown a party where you only invited two people and only one of them showed up? [laughs] It was something else, it was a time.</p>
+<p>It's sorta interesting to look back at your life and sum it up or say who you are. You wanna come off humble because you know how everybody sees themselves differently... still not answering the question yet. [laughs] Who am I...? My childhood was... my parents did a really good job of trying to put my interests first. Did you ever have to get schlucked along when your brother had something to do? My parents were really solid in that they let me go home. So it’s like they really did a good job of putting me first. However, there were experiences that I feel I missed out on because they were so nurturing. Things like going to camp: I didn't like getting dirty so they’re like, "Oh you don't have to go to camp, that's cool," but you know... then you kinda miss that. Now I'm what, 23, almost turning 24 and it'd be weird if I went to camp with a bunch of kids. I think the guy that you know now—sorta jokey, that stuff... I wasn’t always like this; I really didn't come out of my shell until nearly the end of middle school. Before then—super shy, very reserved. One of my birthday parties (and this might be sad, though also funny): see I was stoked for the Gamecube to come out, so I got Mario Party and... have you ever thrown a party where only half the people come? Have you ever thrown a party where you only invited two people and only one of them showed up? [laughs] It was something else, it was a time.</p>
 
 <p>High school, kinda felt like things were falling into place a little bit. I didn't know what I wanted to be until maybe around Facebook? That sorta thing? Like I'm going to make an app, make a lot of money, all that sorta stuff... I never really considered myself someone who would work nine to five. Just do the one big thing, because to me... I value time really more than anything else in a way. I don't mind spending 30 bucks here and there, like almost in the way of shipping: do you wanna wait possibly two to three weeks for something or would you rather pay 50 bucks to get it the next day? That’s the same way I view time; I view my time as something worthwhile. I didn't want to be committed to somewhere like the place I used to work, where I had to commute—losing eight hours a day basically. So that was a struggle... but in high school I was really high on myself and thought the world was my oyster.</p>
 
@@ -69,12 +69,6 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 
 <p>I think if I could choose, I would probably choose both my grandfathers and invite my family as well. Kind of like... I mean hopefully they're not zombies. I kinda felt like they were role models—really big role models in my life. My mom's dad, my grandfather on my mom's side... he actually wasn't even my biological grandfather; they remarried years before I was born, but they always treated me like I wasn't any different. He liked baseball, I liked football, but he pretended to like football his entire life, and he watched football just so he could talk to me about it. Like that’s the kind of guy he was and he would never let you know. So I think that I would love to be able to sit down with him and get to reflect on where I am now. That and also my dad’s dad cause he was really funny, he was really cool, he always treated people with respect and both of them always dressed in suits all the time, it's like come on, we love our Jewish men.</p>
 
-<div class="profile_imgs">
-  <a href="{{ page.images }}13.jpg" data-lightbox="tyler-3">
-    <img src="{{ page.images }}13.jpg" alt="sexy guy">
-  </a>
-</div>
-
 <div class="quote">
   <hr>
   <h2 class="to-fade-up">"{{ page.quote3 }}"</h2>
@@ -88,7 +82,12 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 <h3 class="question">If you could change anything in how you were raised, what would you change?</h3>
 
 <p> I kind of wish my parents were a little less coddling: in the sense that I lived like 15 minutes from school, but they wouldn't let me walk home until I was in high school. We’re a family that watched a lot of <i>Law and Order</i>, <i>C.S.I.</i>, <i>America's Most Wanted</i>, so my dad is very protective and that sorta thing. I wish they had taken their foot off the gas a lil' bit, because it strayed me away from wanting to date anyone. It's just like, "Great I get to invite my dad too to this date." So kind of... I wish I had a bit more freedom to make my own mistakes as opposed to, "Don't do this don't do that."</p>
->
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}2.jpg" data-lightbox="tyler-3">
+    <img src="{{ page.images }}2.jpg" alt="sexy boy">
+  </a>
+</div>
 
 <h3 class="question">If you could wake up one day, gain any any ability or character trait, what would that be?</h3>
 
@@ -96,7 +95,7 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 
 <h3 class="question">What do you value most in your friendships? Can you describe a best friend?</h3>
 
-<p>I think the thing I value the most... the most common trait is that you can pick up where you left off with someone, without any awkwardness. No forcing a conversation just like <i>Hey man</i>! It's kinda funny that every single one of my best friends... it's always like, <i>Yo beautiful, hey handsome</i>, very homo-erotic. I’d probably say that... having <i>THAT</i>, it's basically just a continuous lull. A lot of my friends, since I had a kid would start a message on Facebook or text. I don't even reply for a day, or a couple of hours, cause I read it, and Zoe needs me and I forget. So it's one of those things... I appreciate those friends that have that patience that are willing to wait for me, and then also can pick up and kick it with me.</p>
+<p>I think the thing I value the most... the most common trait is that you can pick up where you left off with someone, without any awkwardness. No forcing a conversation just like, "Hey man!" It's kinda funny that every single one of my best friends... it's always like, "Yo beautiful, hey handsome," very homo-erotic. I’d probably say that... having <i>THAT</i>, it's basically just a continuous lull. A lot of my friends, since I had a kid would start a message on Facebook or text. I don't even reply for a day, or a couple of hours, cause I read it, and Zoe needs me and I forget. So it's one of those things... I appreciate those friends that have that patience that are willing to wait for me, and then also can pick up and kick it with me.</p>
 
 <h3 class="question">What do you think your greatest accomplishment?</h3>
 
@@ -110,7 +109,7 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 
 <h3 class="question">What is your most treasured memory?</h3>
 
-<p>I think another moment probably with Zo. When your kid is born, typically they want milk, diaper change, <i>blah-blah-blah</i>, and I wasn't with it. When she was born, I wasn't really the person that I am now. For the first year, I would say that we weren't super close because she always wanted to be with her mom. I mean like I got boobies, but I don't got milk. [grabs his boobies] So it’s like, you kinda feel useless... she would let me rock her to sleep and everything, but beyond that, she wanted her mom more than me. And so the most heartwarming moment was probably the time where she's a bit over one. Mom's at work... she had to go back to work and so because of that, Zoe and I had more time to bond, I had no choice now but to change her diapers and clean her poo. You don't have a choice anymore, you have to do it. So at that point, being more involved, moreso than I was before, and taking care of her... she's all, "Daddy, I want daddy," that was the first time she ever did that, it was very... vindicating. I was like, <i>Awwwwwww</i>, that’s when we started to really bond. Like obviously you always love your kid no matter what, but it finally felt mutual. It was a rockstar moment.</p>
+<p>I think another moment probably with Zo. When your kid is born, typically they want milk, diaper change, <i>blah-blah-blah</i>, and I wasn't with it. When she was born, I wasn't really the person that I am now. For the first year, I would say that we weren't super close because she always wanted to be with her mom. I mean like I got boobies, but I don't got milk. [grabs his boobies] So it’s like, you kinda feel useless... she would let me rock her to sleep and everything, but beyond that, she wanted her mom more than me. And so the most heartwarming moment was probably the time where she's a bit over one. Mom's at work... she had to go back to work and so because of that, Zoe and I had more time to bond, I had no choice now but to change her diapers and clean her poo. You don't have a choice anymore, you have to do it. So at that point, being more involved, moreso than I was before, and taking care of her... she's all, "Daddy, I want daddy," that was the first time she ever did that, it was very... vindicating. I was like, <i>awww</i>, that’s when we started to really bond. Like obviously you always love your kid no matter what, but it finally felt mutual. It was a rockstar moment.</p>
 
 <h3 class="question">What was your most terrible memory?</h3>
 
@@ -145,12 +144,17 @@ quote5: You try to have a normal conversation, or you say things that's basicall
 
 <h3 class="question">If you were to die this evening, with no opportunity to communicate with anyone, what would you regret not having told someone?</h3>
 
-<p>I don't think I show enough appreciation for my parents, or for everyone. In a sense, I try to be pretty stoic at times. It's easy to be laughing, make jokes and be happy, it's harder to be heavy hitting with emotions. But I regret not being, "Hey dad I love you, hey mom I love you," because when my grandpa died on my mom’s side... like he called all the grandchildren into the room and say good-bye. At that point, he just wanted to talk to someone or whatever, cause like... kind of waiting to go. My regret then: you don't know what to tell somebody that knows they're gonna die. You try to have a normal conversation, or you say things that's basically their eulogy for them. So at the time, I decided to do a basic conversation like, "How bout them Blue Jays?" and "I have this cool business idea". And he's kinda funny at the time, cause he's like, <i>next</i>, he's bored of the conversation. So I kind of regret not saying, "Hey I appreciate everything you’ve done for me... just so you know." Giving him that reassurance, I regret not doing that, and I don't want to regret doing that with other people. I appreciate you Danny.</p>
+<p>I don't think I show enough appreciation for my parents, or for everyone. In a sense, I try to be pretty stoic at times. It's easy to be laughing, make jokes and be happy, it's harder to be heavy hitting with emotions. But I regret not being, "Hey dad I love you, hey mom I love you," because when my grandpa died on my mom’s side... like he called all the grandchildren into the room and say good-bye. At that point, he just wanted to talk to someone or whatever, cause like... kind of waiting to go. My regret then: you don't know what to tell somebody that knows they're gonna die. You try to have a normal conversation, or you say things that's basically their eulogy for them. So at the time, I decided to do a basic conversation like, "How bout them Blue Jays?" and "I have this cool business idea". And he's kinda funny at the time, cause he's like, "Next," he's bored of the conversation. So I kind of regret not saying, "Hey I appreciate everything you’ve done for me... just so you know." Giving him that reassurance, I regret not doing that, and I don't want to regret doing that with other people. I appreciate you Danny.</p>
 
 <h3 class="question">Your house, containing everything that you own catches fire, after saving loved ones and pets, you have time to make a final dash to save one item, what would that be?</h3>
 
 <p>Probably my laptop cause theres so much porn in it and I don't want to download it again. [laughs]</p>
 
+<div class="profile_imgs">
+  <a href="{{ page.images }}13.jpg" data-lightbox="tyler-6">
+    <img src="{{ page.images }}13.jpg" alt="sexy guy">
+  </a>
+</div>
 
 <h3 class="question">Share a personal problem that you’re going through right now, and how you plan on remedying that</h3>
 
