parallax starting to work

--- a/_profiles/04Yannie Lo.html
+++ b/_profiles/04Yannie Lo.html
@@ -8,6 +8,7 @@ factCategory: Activity
 factFact: Hearing myself talk about myself
 playlistLink:
 
+shadowImage: /assets/images/portraits/yannie_lo/yannie_lo-shadow.jpg
 headImage: /assets/images/portraits/yannie_lo/yannie_lo-profile.jpg
 images: /assets/images/portraits/yannie_lo/yannie_lo-
 quote1: In terms of what I wanted to do, I figured it out by doing a bunch of shit I didn't want to do.
